--- a/dsmixtures.bib
+++ b/dsmixtures.bib
@@ -430,3 +430,13 @@
 	School = {Stanford University},
 	Title = {{Interior Algorithms for Linear, Quadratic, and Linearly Constrained Convex Programming}},
 	Year = {1987}}
+
+@article{Giammarino:2014eg,
+author = {Giammarino, Mauro and Quatto, Piero},
+title = {{On estimating Hooded crow density from line transect data through exponential mixture models}},
+journal = {Environmental and Ecological Statistics},
+year = {2014},
+month = jan
+}
+
+
