--- a/dsmixtures.tex
+++ b/dsmixtures.tex
@@ -289,7 +289,7 @@ Mixture model detection functions based on half-normal components are available 
 
 \section*{Acknowledgements}
 
-DLM acknowledges the UK EPSRC for financial support during his PhD, and Simon Wood for useful discussions.  Both authors thank David Borchers, who suggested the parametrisation for the mixture proportions (Appendix S1), Tiago Marques for helpful comments on an earlier draft, and the following people, who provided case study data: Rob Williams (B.C. marine mammals), Dan Pike (pilot whales), Kelly Borkin (wood ants) and Steve Fancy (Amakihi).
+DLM acknowledges the UK EPSRC for financial support during his PhD, and Simon Wood for useful discussions.  Both authors thank David Borchers, who suggested the parametrisation for the mixture proportions (Appendix S1) and Tiago Marques for helpful comments on an earlier draft. The authors thank Raincoast Conservation Foundation and Rob Williams for allowing us to use the perpendicular sightings distance data previously reported in \cite{Williams:2007tc}; Daniel Pike (pilot whales); Kerry Borkin for the wood ant data and Steven Fancy (Amakihi).
 
 %\section*{References}
 \bibliography{dsmixtures}
